k8s/rabbitmq/rabbitmq_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: pfe
spec:
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    port: 5672
    targetPort: 5672
  - name: mgmt
    port: 15672
    targetPort: 15672
  type: ClusterIP
